--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,11 +5,11 @@
   --background: #ffffff;
   --foreground: #171717;
   --zennero-blue: #929ea7;
-  --zennero-primary: #ff4082;
-  --zennero-primary-dark: #e6396f;
-  --zennero-primary-light: #ff70a0;
-  --zennero-accent: #2c3454;
-  --zennero-secondary: #36AC8B;
+  --zennero-primary: #FF9B29;
+  --zennero-primary-dark: #e6821a;
+  --zennero-primary-light: #ffb456;
+  --zennero-accent: #1A237E;
+  --zennero-secondary: #4A379A;
   --zennero-dark: #000000;
 }
 
