--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,11 +5,11 @@
   --background: #ffffff;
   --foreground: #171717;
   --zennero-blue: #929ea7;
-  --zennero-primary: #FF9B29;
-  --zennero-primary-dark: #e6821a;
-  --zennero-primary-light: #ffb456;
+  --zennero-primary: #C3D639;
+  --zennero-primary-dark: #a8bc2f;
+  --zennero-primary-light: #d4e54f;
   --zennero-accent: #1A237E;
-  --zennero-secondary: #4A379A;
+  --zennero-secondary: #36AC8B;
   --zennero-dark: #000000;
 }
 
